--- a/Employees/webapp/view/MainView.view.xml
+++ b/Employees/webapp/view/MainView.view.xml
@@ -1,9 +1,20 @@
 <mvc:View controllerName="logaligroup.employees.controller.MainView"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m" xmlns:core="sap.ui.core">
     <Page id="page" title="{i18n>title}">
         <content > 
-            <Text text="Hola Mundo"/>
+            <HBox >
+               <Label id="labelEmployee" labelFor="inputEmployee" text="{i18n>lablelEmployee}" class="sapUiSmallMargin"/>
+               <Input id="inputEmployee" maxLength="10" width="200px" class="sapUiSmallMarginEnd" liveChange="onValidate"/> 
+               <Label id="labelCountry" labelFor="slCountry" text="{i18n>lablelCountry}" class="sapUiSmallMargin" visible="false"/> 
+               <Select  id="slCountry" forceSelection="false" visible="false">
+                   <items>
+                      <core:Item key="US" text="{i18n>CountryUS}"/>
+                      <core:Item key="UK" text="{i18n>CountryUK}"/>
+                      <core:Item key="ES" text="{i18n>CountryES}"/> 
+                   </items>
+               </Select>
+            </HBox>
         </content >
     </Page>
 </mvc:View>
