--- a/Employees/webapp/view/MasterEmployee.view.xml
+++ b/Employees/webapp/view/MasterEmployee.view.xml
@@ -1,11 +1,11 @@
-<mvc:View controllerName="logaligroup.Employees.controller.MainView"
+<mvc:View controllerName="logaligroup.Employees.controller.MasterEmployee"
           xmlns:mvc="sap.ui.core.mvc"           
           xmlns="sap.m" 
           xmlns:core="sap.ui.core"
           displayBlock="true">
     <Page id="page" title="{i18n>title}">
         <content > 
-            <HBox >
+            <HBox wrap="Wrap">
                <Label id="labelEmployee" labelFor="inputEmployee" text="{i18n>lablelEmployee}" class="sapUiSmallMargin"/>
                <Input id="inputEmployee" value="{jsonCountries>/EmployeeId}" maxLength="10" width="200px" class="sapUiSmallMarginEnd" /> 
                <Label id="labelCountry" labelFor="slCountry" text="{i18n>lablelCountry}" class="sapUiSmallMargin" visible="true"/> 
