--- a/Employees/webapp/view/App.view.xml
+++ b/Employees/webapp/view/App.view.xml
@@ -1,7 +1,10 @@
 <mvc:View controllerName="logaligroup.Employees.controller.App"
-    xmlns:html="http://www.w3.org/1999/xhtml"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <App id="app">
-    </App>
+          xmlns:mvc="sap.ui.core.mvc"           
+          displayBlock="true"
+          xmlns="sap.m" 
+          xmlns:core="sap.ui.core">
+    <Shell id="shell">
+        <App id="app">
+        </App>
+    </Shell>          
 </mvc:View>
