--- a/webapp/view/OrderDetails.view.xml
+++ b/webapp/view/OrderDetails.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="logaligroup.Employees.controller.OrderDetails"
+<mvc:View xmlns:upload="sap.m.upload" controllerName="logaligroup.Employees.controller.OrderDetails"
           xmlns:mvc="sap.ui.core.mvc"           
           displayBlock="true"
           xmlns="sap.m" 
@@ -56,7 +56,35 @@
                         <Button text="{i18n>clear}" press="onClearSignature" class="sapUiTyniMarginBegin"></Button>
                     </FlexBox>
                 </l:Grid> 
+                <UploadCollection id="uploadCollection"
+                                   maximumFilenameLength="55" 
+                                   maximumFileSize="10"
+                                   multiple="true"
+                                   sameFilenameAllowed="true"
+                                   instantUpload="true"
+                                   uploadUrl="/sap/opu/odata/sap/YSAPUI5_SRV_01/FilesSet"
+                                   change="onFileChange"
+                                   uploadComplete="onFileUploadComplete"
+                                   beforeUploadStarts="onFileBeforeUpload"
+                                   fileDeleted="onFileDeleted"/>
+                
+                <!-- <upload:UploadSet id="uploadSet"
+                                  maxFileNameLength="55"  
+                                  maxFileSize="10"   
+                                  uploadUrl="/sap/opu/odata/sap/YSAPUI5_SRV_01/FilesSet/"
+                                  beforeUploadStarts="onFileBeforeUpload"
+                                  uploadCompleted="onFileUploadComplete"
+                                  afterItemRemoved="onFileDelete"/>                                    -->
+            </Panel>
+            <Panel headerText="{i18n>orderProducts}">
+                <List items="{path:'odataNorthwind>Order_Details', parameters : { expand: 'Product'}, factory: '.factoryOrderDetails'}"/>
             </Panel>
         </content>
+        <footer>
+            <Toolbar >
+                <ToolbarSpacer ></ToolbarSpacer>
+                <Button text="{i18n>saveSignature}" press="onSaveSignature"></Button>
+            </Toolbar>
+        </footer>
     </Page>              
 </mvc:View>
